Fixed spacing issues.

--- a/html/style/style.css
+++ b/html/style/style.css
@@ -232,6 +232,10 @@ div#connect p {
   padding: 5px;
 }
 
+#main ul li {
+  white-space: pre-wrap;
+}
+
 #main ul li.highlight {
   background-color: yellow;
 }
